Only use java 8 API